Test/Files/Parser/FullParserTestCases/Good/FullTests/Out/testcase00_06.out
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Type> ::= int


Parse error on line 9:
...ccum = 1;		int temp;		while (i < n) {
----------------------^
Expecting '='